--- a/submission/AdaptiveND_PrimieroAllo_revised.tex
+++ b/submission/AdaptiveND_PrimieroAllo_revised.tex
@@ -967,7 +967,7 @@ The second marking rule $\XBox$M2 reflects the following condition: if a formula
 %
 %In this case the formula $B$ derived at stage $2$ is first marked, when the only derived $\Delta$ is the one on whose condition $B$ is derived; later, it get unmarked because the condition on which it is derived is safe when one considers $\Delta_{6}=\{\neg B\wedge \neg\neg B\}$ and it can be further derived under such condition.
 
-\subsection{An example with $\bigvee(\Delta^{min})$-selection}
+\subsection{An example with $\bigvee(\Delta^{min})$-selection}\label{subsec:sel-example}
 
 
 The previous example is rather simple, in that it shows a formula that is first derived under an adaptive condition (referring to an abnormal formula assumed to be false), and then retracted after that condition is validated again.
@@ -1152,7 +1152,7 @@ We illustrate the procedure by reconstructing the linear proof that corresponds 
 \begin{center}
     \begin{tabular}{cllcl}
         (1) & $\neg p \vee q$ & Prem & $\emptyset$\\
-        (2) & $\bigvee \{\neg p, q\}$ & $\vee$E, (2) & $\emptyset$\\
+        (2) & $\bigvee \{\neg p, q\}$ & $\vee$E, (1) & $\emptyset$\\
         (3) & $p$ & Prem & $\emptyset$\\
         (4) & $\bigvee \{p \wedge \neg p, q\}$ & $\wedge$ I, (2, 3) & $\emptyset$\\
         (5) & $q$ & RC, (4) & $\{p\}$ & $\XBox^{10}$\\
@@ -1165,21 +1165,37 @@ We illustrate the procedure by reconstructing the linear proof that corresponds 
 \end{center}
 In this proof, the application of $\vee$E on line (2) is based on the representation of the disjunctive comma by a `super-imposed' classical disjunction (a device that effectively plays the same role in adaptive logic, see \cite[\S 2.2, 2.7]{Strasser:AdaptiveLogicsForDefeasibleReasoning:}), whereas the application of $\wedge$I is valid in virtue of the \textbf{CLuN}-validity of $\neg p \vee q, p \vdash (p \wedge \neg p) \vee q$ which warrants the application of the unconditional rule (with empty conditions). The final marking is not added as a separate line, but is instead added in the fifth place on line 5 and labelled with the number of the line or stage at which the relevant abnormality was derived.
 
-In general, there is no guarantee that the translation of an {\sf AdaptiveND} proof into a linear adaptive proof will contain all the markings required by the latter. This is because we can translate a proof tree at a stage {\sf s} not yet unmerked, which will be merked at stage {\sf s+1} and still obtain a valid adaptive linear proof which in its standard format would be \textit{immediately} marked. Nonetheless, we can always guarantee that there is an extension of such a proof that contains the required marking.
+As illustrated in a second example based on the proof from \S \ref{subsec:sel-example}, there is no guarantee that the translation of an {\sf AdaptiveND} proof into a linear adaptive proof will contain all the markings required by the latter.
+\begin{center}
+    \begin{tabular}{cllcl}
+        (1) & $p \vee r$ & Prem & $\emptyset$\\
+        (2) & $\bigvee \{p, r\}$ & $\vee$E, (1) & $\emptyset$\\
+        (3) & $\neg p$ & Prem & $\emptyset$\\
+        (4) & $\bigvee \{p \wedge \neg p, r\}$ & $\wedge$ I, (2, 3) & $\emptyset$\\
+        (5) & $r$ & RC, (4) & $\{p\}$ & $\XBox^{??}$\\
+        (6) & $p \vee q$ & Prem & $\emptyset$\\
+        (7) & $\bigvee(p, q)$ & $\vee$E, (6)& $\emptyset$\\
+        (8) & $\neg p$ & Prem & $\emptyset$\\
+        (9) & $\bigvee(p \wedge \neg p, q)$ & $\wedge$ I, (7, 8) & $\emptyset$\\
+        (10) & $\neg q$ & Prem & $\emptyset$\\
+        (11) & $\bigvee(p \wedge \neg p, q \wedge \neg q)$ & $\wedge$ I, (9, 10) & $\emptyset$
+    \end{tabular}
+\end{center}
+Indeed, whereas the above proof is a straightforward translation of the tree-form proof up to stage {\sf 11}, the marking of line 5 that should be added to the linear proof once $\bigvee(p \wedge \neg p, q \wedge \neg q)$ is derived cannot be added simply in virtue of mechanically translating the proof into a linear format. This is because in the standard proof-format marking is governed by a definition, which simply stipulates when a line is marked, whereas in \textsf{AdaptiveND} marking is governed by rules and therefore requires the execution of additional inferential steps.\footnote{See also footnote 10 of \cite{BDVM08} for a discussion of this distinction.} To show that proofs in \textsf{AdaptiveND} correctly capture the adaptive dynamics, we will therefore have to show that such ``missing markings'' can always be obtained by a further extension of a proof.
 
 In the next section we complete our system with the required meta-theoretical analysis needed to define derivability at stage and final derivability.
 
 \section{Derivability}\label{sec:meta}
 
-In the example from the previous section we have illustrated how the marking condition establishes a dynamic derivability relation, which allows to derive formulas and retract them. Whenever a certain formula is derived on some $\phi\in \Delta^{min}$ adaptive condition, it might still be marked afterwards according to $\XBox R$. Consequently, a judgement of the form $\Turn{\Gamma; \Theta^-}{\psi}$ only expresses what is derived at a stage. This gives us a notion of derivability at stage:
+In the example from the previous section we have illustrated how the marking condition establishes a dynamic derivability relation, which allows to derive formulas and retract them. Whenever a certain formula is derived on some $\phi\in \Delta^{min}$ adaptive condition, it might still be marked afterwards according to $\XBox R$. Consequently, a judgement of the form $\Turn{\Gamma; \Theta^-}{\psi}$ only expresses what is derived at a stage. This gives us the notion of derivability at a stage:
 
 \begin{definition}[Derivability at stage]
 %$\Turn{\Gamma; \phi^{-}}{\psi}$ iff at ${\sf s}$ it is not the case that $\TurnMarked{\Gamma}{\psi}$.
-A formula $\psi$ is derived at stage {\sf s}  iff $\TurnPrime{\Gamma; \phi^{-}}{\psi}$ where $\mathsf{s'\leq s}$ and it is not the case that $\TurnPrimePrimeMarked{\Gamma; \cdot}{\psi}$, where $\mathsf{s'\leq s''\leq s}$.
+A formula $\psi$ is derived at stage {\sf s}  iff $\TurnPrime{\Gamma; \phi^{-}}{\psi}$ where $\mathsf{s'\leq s}$ and it is not the case that $\TurnPrimePrimeMarked{\Gamma; \cdot}{\psi}$ for some $\mathsf{s'\leq s''\leq s}$.
 %$\Turn{\Gamma; \cdot}{\phi,\psi}$
 \end{definition}
 
-A more stable notion of derivability, called \emph{final derivability}, holds when marking is no longer possible. This notion is customarily defined with a reference to possible extensions of a proof.\footnote{``A is finally derived from $\Gamma$ on line $i$ of a proof at stage $s$ iff (i) $A$ is the second element of line $i$, (ii) line $i$ is not marked at stage $s$, and (iii) every extension of the proof in which line $i$ is marked may be further extended in such a way that line $i$ is unmarked.'' \cite[229]{batens07}} Because we only take into consideration finite premise-sets, we can pursue a more explicit characterisation of final derivability.
+A more stable notion of derivability, called \emph{final derivability}, holds when marking is no longer possible. This notion is customarily defined with a reference to possible extensions of a proof.\footnote{``A is finally derived from $\Gamma$ on line $i$ of a proof at stage $s$ iff (i) $A$ is the second element of line $i$, (ii) line $i$ is not marked at stage $s$, and (iii) every extension of the proof in which line $i$ is marked may be further extended in such a way that line $i$ is unmarked.'' \cite[229]{batens07}} By only taking finite premise-sets into consideration, we can pursue a more explicit characterisation of final derivability.
 % Because our left-hand side of the $\vdash$ sign, hence our ``premise set'', includes the $\vee_{\sf CL}$ connective for $Dab$-formulas, it is in principle possible to generate trees where some standard adaptive consequences (i.e. consequences of a corresponding AL in standard format) would be first marked and then never get unmarked.\footnote{These results are based on the generic format for Adaptive logics presented in \cite{strasservandeputte12}. A different approach that allows insertion of lines in proof trees is given for the Standard Format in \cite{batens2009}.}
 %
 %[HERE AN EXAMPLE]
@@ -1198,12 +1214,12 @@ $\Sf(\Gamma)=\bigcup_{\phi \in \Gamma} \{\psi \mid \psi$ is a subformula of $ \p
 \end{definition}
 
 
-From $\Sf(\Gamma)$ we then construe all the possible abnormalities which can be obtained by its members:
+From $\Sf(\Gamma)$ we then construe all the possible abnormalities that can be obtained from its members:
 
 \begin{definition}[Abnormalities relevant to the premise set]
 $\Omega(\Gamma)=\{\psi\wedge \neg \psi \in \Omega \mid \psi\in \Sf(\Gamma)\}$.
 \end{definition}
-For \textsf{AdaptiveND} and \textbf{CLuN$^r$} the requirement that all $\psi\wedge \neg \psi$ should be in $\Omega$ is trivially satisfied. This condition is necessary whenever $\Omega$ is based on a restricted logical form; e.g. when abnormalities are contradictions of the form $\psi \wedge \neg \psi$ with $\psi$ atomic. In that case, our definition of $\Omega(\Gamma)$ is co-extensive with the more basic $\{\psi \wedge \neg \psi \mid \psi \in \At(\Gamma)\}$.
+For \textsf{AdaptiveND} and \textbf{CLuN$^r$} the requirement that all $\psi\wedge \neg \psi$ should be in $\Omega$ is trivially satisfied. This condition becomes mandatory when $\Omega$ is based on a restricted logical form; e.g. when abnormalities are contradictions of the form $\psi \wedge \neg \psi$ with $\psi$ atomic. In that case, our definition of $\Omega(\Gamma)$ is co-extensive with the more basic $\{\psi \wedge \neg \psi \mid \psi \in \At(\Gamma)\}$.
 %\begin{definition}
 %Let $P$ be a proof-tree of {\sf AdaptiveND}. We call $P^{\sf ext}$ the complete extension of $P$ at stage {\sf s} if $P^{\sf ext}$ extends $P$ by a possibly infinite number of derivation steps such that
 %
@@ -1261,7 +1277,7 @@ We can now formulate our notion of final derivability:
 A formula $\psi$ is finally derived $\TurnChecked{\Gamma;\phi^{-}}{\psi}$ if it is derived at the latest stage {\sf s} of some abnormality and marking complete proof $P$.
 \end{definition}
 %
-The definition guarantees final derivability for any derived formula whose adaptive condition is not minimal.
+The definition guarantees final derivability for any derived formula {\color{red}whose adaptive condition is not minimal. WHAT DOES THIS MEAN?}
 %Notice that the second requirement might not be satisfied at any finite stage {\sf s}, hence it might be guaranteed only at meta-theoretical level.
 
 
@@ -1273,20 +1289,20 @@ $\TurnChecked{\Gamma;\phi^{-}}{\psi}$ in {\sf AdaptiveND} if and only if there i
 \begin{proof}
 
 \begin{itemize}
-\item[$\rightarrow$] By assumption $\psi$ is finally derived, therefore there is an abnormality and marking complete proof $P$ in which it is derived. Consider the translation $\mathbb{P}$ of $P$ in a linear adaptive proof: by assumption, $P$ contains every abnormality of its premise set $\Gamma$ and so does $\mathbb{P}$; accordingly, every formula which is marked in $P$ will be marked in $\mathbb{P}$. Because of the completeness with resepct to marking of $P$, then $\mathbb{P}$ must have every unmarked formula which is unmarked in $P$. Provided $P$ includes all its possible extensions and by translation so does $\mathbb{P}$, then by the standard definition of final derivability (see footnote 2) $\psi$ must be finally derived in $\mathbb{P}$ as well.
+\item[$\rightarrow$] By assumption $\psi$ is finally derived, therefore there is an abnormality and marking complete proof $P$ in which it is derived. Consider the translation $\mathbb{P}$ of $P$ in a linear adaptive proof: by assumption, $P$ contains every abnormality of its premise set $\Gamma$ and so does $\mathbb{P}$; accordingly, every formula which is marked in $P$ will be marked in $\mathbb{P}$. Because of the completeness with respect to marking of $P$, then $\mathbb{P}$ must have every unmarked formula which is unmarked in $P$. Provided $P$ includes all its possible extensions and by translation so does $\mathbb{P}$, then by the standard definition of final derivability (see footnote 2) $\psi$ must be finally derived in $\mathbb{P}$ as well.
 
 \item[$\leftarrow$] Assume that $\psi$ is finally derived in some linear adaptive proof $\mathbb{P}$; then
 
 
 \begin{itemize}
-  \item[for \textbf{CluN}$^{R}$]  $\Gamma\vdash_{CluN}\psi\vee \phi$ with $\phi\cap U(\Gamma)=\emptyset$. By Theorem \ref{thm:clun} there is a provable {\sf AdaptiveND} judgement $\Turn{\Gamma;\cdot}{\psi,\phi}$. By applying {\sf RC}, we obtain a judgement $\TurnNext{\Gamma;\phi^{-}}{\psi}$. If $\TurnMarked{\Gamma;\phi^{-}}{\psi}$ in some abnormality and marking complete proof $P$, then $\phi\cap U(\Gamma)\neq\emptyset$, which contradicts the assumption, hence $\TurnChecked{\Gamma;\phi^{-}}{\psi}$ in $P$.
+  \item[for \textbf{CluN}$^{R}$]  $\Gamma\vdash_{\mathbf{CluN}}\psi\vee \phi$ with $\phi\cap U(\Gamma)=\emptyset$. By Theorem \ref{thm:clun} there is a provable {\sf AdaptiveND} judgement $\Turn{\Gamma;\cdot}{\psi,\phi}$. By applying {\sf RC}, we obtain a judgement $\TurnNext{\Gamma;\phi^{-}}{\psi}$. If $\TurnMarked{\Gamma;\phi^{-}}{\psi}$ in some abnormality and marking complete proof $P$, then $\phi\cap U(\Gamma)\neq\emptyset$, which contradicts the assumption, hence $\TurnChecked{\Gamma;\phi^{-}}{\psi}$ in $P$.
 
 
   \item[for \textbf{CluN}$^{M}$]
 
 \begin{enumerate}
-\item  either $\Gamma\vdash_{CluN}\psi\vee \phi$ with $\phi\notin \{\Delta^{min}_{i\dots n}\}, \forall \{\Delta^{min}_{i\dots n}\}\in \Phi(\Gamma)$ such that $\Turn{\Gamma;\cdot}{\Phi(\Gamma)}$. By Theorem \ref{thm:clun} there is a provable {\sf AdaptiveND} judgement $\Turn{\Gamma;\cdot}{\psi,\phi}$. By applying {\sf RC}, we obtain a judgement $\TurnNext{\Gamma;\phi^{-}}{\psi}$. If $\TurnMarked{\Gamma;\phi^{-}}{\psi}$ in some abnormality and marking complete proof $P$, then $\phi\in \{\Delta^{min}_{i\dots n}\}, \forall \{\Delta^{min}_{i\dots n}\}\in \Phi(\Gamma)$, which contradicts the assumption, hence $\TurnChecked{\Gamma;\phi^{-}}{\psi}$ in $P$.
-\item or $\Gamma\vdash_{CluN}\psi\vee \phi \vee \xi$ with $\phi, \xi\notin \{\Delta^{min}_{i\dots n}\}$, for some $\{\Delta^{min}_{i\dots n}\}\in \Phi(\Gamma)$ such that $\Turn{\Gamma;\cdot}{\Phi(\Gamma)}$. By Theorem \ref{thm:clun} there is a provable {\sf AdaptiveND} judgement $\Turn{\Gamma;\cdot}{\psi,\phi,\xi}$. By applying {\sf RC}, we obtain a judgement $\TurnNext{\Gamma;\phi^{-},\xi^{-}}{\psi}$. If $\TurnMarked{\Gamma;\phi^{-},\xi^{-}}{\psi}$ in some abnormality and marking complete proof $P$, then $\phi\in \{\Delta^{min}_{i\dots n}\}$, for some $\{\Delta^{min}_{i\dots n}\}\in \Phi(\Gamma)$, which contradicts the assumption, hence $\TurnChecked{\Gamma;\phi^{-}}{\psi}$ in $P$.
+\item either $\Gamma\vdash_{\mathbf{CluN}}\psi\vee \phi$ with $\phi\notin \{\Delta^{min}_{i\dots n}\}, \forall \{\Delta^{min}_{i\dots n}\}\in \Phi(\Gamma)$ such that $\Turn{\Gamma;\cdot}{\Phi(\Gamma)}$. By Theorem \ref{thm:clun} there is a provable {\sf AdaptiveND} judgement $\Turn{\Gamma;\cdot}{\psi,\phi}$. By applying {\sf RC}, we obtain a judgement $\TurnNext{\Gamma;\phi^{-}}{\psi}$. If $\TurnMarked{\Gamma;\phi^{-}}{\psi}$ in some abnormality and marking complete proof $P$, then $\phi\in \{\Delta^{min}_{i\dots n}\}, \forall \{\Delta^{min}_{i\dots n}\}\in \Phi(\Gamma)$, which contradicts the assumption, hence $\TurnChecked{\Gamma;\phi^{-}}{\psi}$ in $P$.
+\item or $\Gamma\vdash_{\mathbf{CluN}}\psi\vee \phi \vee \xi$ with $\phi, \xi\notin \{\Delta^{min}_{i\dots n}\}$, for some $\{\Delta^{min}_{i\dots n}\}\in \Phi(\Gamma)$ such that $\Turn{\Gamma;\cdot}{\Phi(\Gamma)}$. By Theorem \ref{thm:clun} there is a provable {\sf AdaptiveND} judgement $\Turn{\Gamma;\cdot}{\psi,\phi,\xi}$. By applying {\sf RC}, we obtain a judgement $\TurnNext{\Gamma;\phi^{-},\xi^{-}}{\psi}$. If $\TurnMarked{\Gamma;\phi^{-},\xi^{-}}{\psi}$ in some abnormality and marking complete proof $P$, then $\phi\in \{\Delta^{min}_{i\dots n}\}$, for some $\{\Delta^{min}_{i\dots n}\}\in \Phi(\Gamma)$, which contradicts the assumption, hence $\TurnChecked{\Gamma;\phi^{-}}{\psi}$ in $P$.
 \end{enumerate}
 \end{itemize}
 
