bibliography + one comment

--- a/submission/AdaptiveND_PrimieroAllo_revised.tex
+++ b/submission/AdaptiveND_PrimieroAllo_revised.tex
@@ -1288,7 +1288,7 @@ $\TurnChecked{\Gamma;\phi^{-}}{\psi}$ in {\sf AdaptiveND} if and only if there i
 
 \begin{proof}
 
-\begin{itemize}
+\begin{itemize}\marginpar{Find uniform notation for proofs ($\mathbb{P}$ or $P$).}
 \item[$\rightarrow$] By assumption $\psi$ is finally derived, therefore there is an abnormality and marking complete proof $P$ in which it is derived. Consider the translation $\mathbb{P}$ of $P$ in a linear adaptive proof: by assumption, $P$ contains every abnormality of its premise set $\Gamma$ and so does $\mathbb{P}$; accordingly, every formula which is marked in $P$ will be marked in $\mathbb{P}$. Because of the completeness with respect to marking of $P$, then $\mathbb{P}$ must have every unmarked formula which is unmarked in $P$. Provided $P$ includes all its possible extensions and by translation so does $\mathbb{P}$, then by the standard definition of final derivability (see footnote 2) $\psi$ must be finally derived in $\mathbb{P}$ as well.
 
 \item[$\leftarrow$] Assume that $\psi$ is finally derived in some linear adaptive proof $\mathbb{P}$; then
