--- a/submission/primiero.bib
+++ b/submission/primiero.bib
@@ -3936,7 +3936,9 @@
   title = {Yes fellows, most human reasoning is complex},
   journal = {Synthese},
   year = {2008},
-  volume = {10.1007/s11229-007-9268-4}
+  volume = {166},
+  number = {1},
+  pages = {113-131}
 }
 
 @BOOK{DAG:logprog,
@@ -13366,7 +13368,7 @@
 
 @ARTICLE{GP:LPm,
   author = {Graham Priest},
-  title = {Minimally Inconsistent \textbf{LP}},
+  title = {Minimally Inconsistent \textbf{{LP}}},
   journal = {Studia Logica},
   year = {1991},
   volume = {50},
