--- a/submission/AdaptiveND_PrimieroAllo_revised.tex
+++ b/submission/AdaptiveND_PrimieroAllo_revised.tex
@@ -679,8 +679,7 @@ The choice set of an empty set of minimal disjunction of abnormalities is empty.
 \end{figure}
 
 
-The derivation of a minimal disjunction of abnormalities and the formation of their union and choice set is a process that occurs along with the development of the proof-tree, and the marking procedure depends on the derivation of these types of judgements. For what follows, the following propositions are useful to ensure that the rules stated in Figure \ref{fig:mindab} 
-are adequately related to the sets of unreliable formulae and minimal choice-sets at a given proof-stage.
+The derivation of a minimal disjunction of abnormalities and the formation of their union and choice set is a process that occurs along with the development of the proof-tree, and the marking procedure depends on the derivation of these types of judgements. Unlike for the standard definitions of unreliable formulae and minimal choice-sets, the rules \textsc{UnRel} and \textsc{Choice} can be applied without taking every minimal disjunction of abnormalities derived up to that stage as a premise. The following propositions guarantee that this does not lead to further complications: if an abnormality occurs in $\bigcup\Delta(\Gamma)$, but is not unreliable according to $\Gamma$, then $\bigcup\Delta(\Gamma)$ was derived from a $\Delta_i$ that isn't minimal; similarly, if an abnormality occurs in some ${\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}$, but isn't verified by a minimally abnormal model, then it was derived from a $\Delta_i$ that isn't minimal. The key to these results is that the side-conditions that apply to the premises of \textsc{UnRel} and \textsc{Choice} refer to all disjunctions of abnormalities that occur unconditionally in the proof, and not only those used as premises.
 
 \begin{proposition}
     If $\Turn{\Gamma;\cdot}{\bigcup\Delta(\Gamma)}$ occurs in a proof and $\Lambda$ is the set of all $\Delta^{min}$ derived up to stage $s$ that are still minimal at $s$, then $\bigcup\Delta(\Gamma) \subseteq \bigcup(\Lambda)$.
@@ -695,11 +694,7 @@ are adequately related to the sets of unreliable formulae and minimal choice-set
 \begin{proposition}
     If $\Turn{\Gamma;\cdot}{{\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}}$ occurs in a proof and $\Lambda$ is the set of all $\Delta^{min}$ derived up to stage $s$ that are still minimal at $s$, then each $\sf{choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}$ is a subset of some minimal choice-set from $\Lambda$.
 \end{proposition}
-\noindent\textsl{Proof.}~Assume $\Turn{\Gamma;\cdot}{{\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}}$ is obtained by an application of \textsc{MinChoice} to a judgement with $\Phi(\Gamma)$ as a consequent. Let $\Delta^{n+1}$ be minimal at stage $s$, and assume that $\Phi'(\Gamma)$ is derivable from judgements with $\Delta_1, \ldots \Delta_{n+1}$ as consequent. By Proposition \ref{prop:choice} we know that ${\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}$ is a subset of some $\phi \in \Phi'(\Gamma)$. Assume, for \emph{reductio}, that $\phi$ is not minimal in $\Phi'(\Gamma)$ because some $\phi' \subset \phi$ with $\phi' \in \Phi'(\Gamma)$.
-
-If $\phi' \subseteq {\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}$ then it must be the case that $\phi' \not\in \Phi(\Gamma)$. This is impossible since the minimality of each $\Delta_1, \ldots, \Delta_{n+1}$ rules out the possibility of that a member of $\Phi'(\Gamma) \setminus \Phi(\Gamma)$ could be strictly included in a member of $\Phi(\Gamma)$.
-
-If $\phi' \not\subseteq {\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}$ \ldots {\color{red} TO BE COMPLETEDX }
+\noindent\textsl{Proof.}~Assume $\Turn{\Gamma;\cdot}{{\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}}$ is obtained by an application of \textsc{MinChoice} to a judgement with $\Phi(\Gamma)$ as a consequent. Let $\Delta^{n+1}$ be minimal at stage $s$, and assume that $\Phi'(\Gamma)$ is derivable from judgements with $\Delta_1, \ldots \Delta_{n+1}$ as consequent. By Proposition \ref{prop:choice} we know that ${\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}$ is a subset of one or more members of $\Phi'(\Gamma)$. Let $\psi_1, \ldots, \psi_m$ be an enumeration of the members of $\Delta^{n+1}$. (i) If some $\psi_i \in \Delta^{n+1}$ is a member of ${\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}$, then the latter is also minimal in $\Phi'(\Gamma)$. (ii) If no $\psi_i \in \Delta^{n+1}$ is a member of ${\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}$, then, because $\Delta^{n+1}$ is not included in any $\Delta_i$, any ${\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min} \cup \{\psi_i\}$ must be minimal in $\Phi'(\Gamma)$.\qed
 
 \subsection{A simple example}\label{sec:example}
 
